@@ -1,9 +1,8 @@
 package com.ropisport.gestion.config;
 
-import com.ropisport.gestion.security.jwt.AuthEntryPointJwt;
-import com.ropisport.gestion.security.jwt.AuthTokenFilter;
-import com.ropisport.gestion.security.service.UserDetailsServiceImpl;
-import com.ropisport.gestion.util.Constants;
+import java.util.Arrays;
+import java.util.List;
+
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -22,8 +21,10 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
-import java.util.List;
+import com.ropisport.gestion.security.jwt.AuthEntryPointJwt;
+import com.ropisport.gestion.security.jwt.AuthTokenFilter;
+import com.ropisport.gestion.security.service.UserDetailsServiceImpl;
+import com.ropisport.gestion.util.Constants;
 
 /**
  * Configuración de seguridad de la aplicación
@@ -32,13 +33,13 @@ import java.util.List;
 @EnableWebSecurity
 @EnableMethodSecurity
 public class SecurityConfig {
-    
+
     @Autowired
     private UserDetailsServiceImpl userDetailsService;
-    
+
     @Autowired
     private AuthEntryPointJwt unauthorizedHandler;
-    
+
     /**
      * Filtro de autenticación JWT
      * @return filtro
@@ -47,7 +48,7 @@ public class SecurityConfig {
     public AuthTokenFilter authenticationJwtTokenFilter() {
         return new AuthTokenFilter();
     }
-    
+
     /**
      * Proveedor de autenticación
      * @return proveedor de autenticación
@@ -55,13 +56,13 @@ public class SecurityConfig {
     @Bean
     public DaoAuthenticationProvider authenticationProvider() {
         DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
-        
+
         authProvider.setUserDetailsService(userDetailsService);
         authProvider.setPasswordEncoder(passwordEncoder());
-        
+
         return authProvider;
     }
-    
+
     /**
      * Administrador de autenticación
      * @param authConfig configuración de autenticación
@@ -72,7 +73,7 @@ public class SecurityConfig {
     public AuthenticationManager authenticationManager(AuthenticationConfiguration authConfig) throws Exception {
         return authConfig.getAuthenticationManager();
     }
-    
+
     /**
      * Codificador de contraseñas
      * @return codificador de contraseñas
@@ -81,48 +82,61 @@ public class SecurityConfig {
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
-    
+
     /**
      * Configuración de CORS
      * @return configuración de CORS
      */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("*")); // Permitir todos los orígenes
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*"));
-        configuration.setAllowCredentials(true);
-        
+        CorsConfiguration config = new CorsConfiguration();
+        config.setAllowedOrigins(List.of("http://localhost:4200"));   // Angular dev
+        config.setAllowedMethods(Arrays.asList("GET","POST","PUT","DELETE","PATCH","OPTIONS"));
+        config.setAllowedHeaders(List.of("*"));
+        config.setAllowCredentials(true);          // solo si envías cookies / Authorization: Bearer
+        config.setMaxAge(3600L);
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
+        source.registerCorsConfiguration("/**", config);
         return source;
     }
-    
+
+
     /**
      * Configuración del filtro de seguridad
      * @param http configuración de HTTP
      * @return configuración del filtro de seguridad
      * @throws Exception si ocurre un error
      */
-    @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-        http
-            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-            .csrf(csrf -> csrf.disable())
-            .exceptionHandling(exception -> exception.authenticationEntryPoint(unauthorizedHandler))
-            .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-            .authorizeHttpRequests(auth -> 
-                auth.requestMatchers("/api/auth/**").permitAll()
-                    .requestMatchers("/api/public/**").permitAll()
-                    .requestMatchers("/error").permitAll()
-                    .requestMatchers("/api/admin/**").hasRole(Constants.ROLE_ADMIN)
-                    .anyRequest().authenticated()
-            );
-        
-        http.authenticationProvider(authenticationProvider());
-        http.addFilterBefore(authenticationJwtTokenFilter(), UsernamePasswordAuthenticationFilter.class);
-        
-        return http.build();
-    }
-}
+@Bean
+public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+    http
+        .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+        .csrf(csrf -> csrf.disable())
+        .exceptionHandling(exception -> exception.authenticationEntryPoint(unauthorizedHandler))
+        .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+        .authorizeHttpRequests(auth ->
+            auth.requestMatchers("/api/auth/**").permitAll()
+                .requestMatchers("/api/public/**").permitAll()
+                .requestMatchers("/error").permitAll()
+
+                // Todas las rutas protegidas requieren rol de ADMIN
+                .requestMatchers("/api/admin/**").hasRole(Constants.ROLE_ADMIN)
+                .requestMatchers("/api/usuarios/**").hasRole(Constants.ROLE_ADMIN)
+                .requestMatchers("/api/roles/**").hasRole(Constants.ROLE_ADMIN)
+                .requestMatchers("/api/empresas/**").hasRole(Constants.ROLE_ADMIN)
+                .requestMatchers("/api/instituciones/**").hasRole(Constants.ROLE_ADMIN)
+                .requestMatchers("/api/tipo-instituciones/**").hasRole(Constants.ROLE_ADMIN)
+                .requestMatchers("/api/categorias/**").hasRole(Constants.ROLE_ADMIN)
+                .requestMatchers("/api/socias/**").hasRole(Constants.ROLE_ADMIN)
+                .requestMatchers("/api/pagos/**").hasRole(Constants.ROLE_ADMIN)
+                .requestMatchers("/api/pago-detalles/**").hasRole(Constants.ROLE_ADMIN)
+
+                .anyRequest().authenticated()
+        );
+
+    http.authenticationProvider(authenticationProvider());
+    http.addFilterBefore(authenticationJwtTokenFilter(), UsernamePasswordAuthenticationFilter.class);
+
+    return http.build();
+}}
